feat: add get thumbnail handler
